# dist-eval-shikhar

./: .gitignore  .pre-commit-config.yaml  CURRICULUM_FORMAT.md  DEMO_SCRIPT.md  PROJECT_STORY.md  README.md  THEORY.md  TRAJECTORY_FORMAT.md  conftest.py  dataset.toml  demo.py  disteval_gui.py  pyproject.toml  wow_demo.py
disteval/: __init__.py  __main__.py  agent_harness.py  bayesian_optimization.py  bootstrap.py  compare.py  compare_report.py  curriculum_optimizer.py  distributed_eval.py  environment_generator.py  environment_registry.py  failure.py  harbor_uv_metric.py  irt.py  logging.py  metrics.py  ppi.py  records.py  recursion_engine.py  repeat.py  report.py  right_tail.py  self_engine.py  test_suite_parser.py  training_harness.py  training_sim.py  trajectory_loader.py  trajectory_memory.py  trajectory_monitor.py  viz.py
disteval/adapters/: __init__.py  generic.py  harbor_jobs.py  (+3 more)
research/: README.md  agent_harness.md  bayesian_optimization_opportunity.md  experimental_validation_plan.md  phase1_master_report.md  phase1a_rmdp_formalism.md  phase1b_disteval_mapping.md  phase1c_integration_questions.md  phase2_master_report.md  phase2a_recursion_engine_api.md  phase2b_decomposition_algorithm.md  phase2c_integration_design.md  phase3_master_report.md  phase3a_environment_schema.md  phase3b_self_improvement_loop.md  phase3c_distributed_evals.md  phase4_master_report.md  phase4a_implementation_plan.md  phase4b_end_to_end_validation.md
tests/: test_adapters.py  test_agent_harness.py  test_bayesian_optimization.py  test_bootstrap.py  test_cli.py  test_compare.py  test_curriculum_optimizer.py  test_deferred_research.py  test_distributed_eval.py  test_environment_generator.py  test_environment_registry.py  test_failure.py  test_init.py  test_logging.py  test_metrics.py  test_records.py  test_recursion_engine.py  test_research_improvements.py  test_right_tail.py  test_self_engine.py  test_swebench_adapter.py  test_test_suite_parser.py  test_training_harness.py  test_training_sim.py  test_trajectory_memory.py  test_trajectory_monitor.py  test_viz.py
(+77 files in other folders)
